[package]
name = "smartsheet"
version = "0.1.0"
authors = ["Alan L <github.com/alan-lawler>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.119"
serde_json = "1.0.61"
serde_derive = "1.0.119"
tokio = { version = "1", features = ["full"] }
polars = "0.14.7"
chrono = "0.4.19"
openssl = { version = "0.10", features = ["vendored"] }